--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/index.html"><img src="assets/img/p-/royalSalonLogo.png" style="width: auto;height: 64px;" width="" height=""></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link active" href="/index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="https://hoseamaganga1.github.io/nell/">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="/gallery.html">Gallery</a></li>
                 </ul>
             </div>
